@@ -1,39 +1,21 @@
 package com.github.glaucioscheibel.concorrente;
 
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.locks.LockSupport;
 
 public class Exercicio08 {
-    private AtomicInteger count = new AtomicInteger(0);
-
-    public void increment() {
-        count.incrementAndGet();
-    }
-
-    public int getCount() {
-        return count.get();
-    }
-
-    public static void main(String[] args) throws Exception {
-        Exercicio08 contador = new Exercicio08();
-
-        Thread t1 = new Thread(() -> {
-            for (int i = 0; i < 1000; i++) {
-                contador.increment();
+    public static void main(String[] args) {
+        AtomicInteger total = new AtomicInteger();
+        try {
+            while (true) {
+                Thread.ofPlatform().start(() -> {
+                    total.incrementAndGet();
+                    LockSupport.park();
+                });
             }
-        });
-
-        Thread t2 = new Thread(() -> {
-            for (int i = 0; i < 1000; i++) {
-                contador.increment();
-            }
-        });
-
-        t1.start();
-        t2.start();
-
-        t1.join();
-        t2.join();
-
-        System.out.println(contador.getCount());
+        } catch (OutOfMemoryError error) {
+            System.out.printf("Consegui criar %d threads.\n", total.get());
+            throw error;
+        }
     }
 }
